[package]
name = "rust-ocean"
version = "0.5.0"
authors = ["Andrew Poelstra <apoelstra@blockstream.com>", "Nikolaos Kostoulas <nikolaos@commerceblock.com"]
description = "Library with support for de/serialization, parsing and executing on data structures and network messages related to Ocean"
license = "CC0-1.0"
homepage = "https://github.com/commerceblock/rust-ocean/"
repository = "https://github.com/commerceblock/rust-ocean/"

[features]
"serde-feature" = [
    "bitcoin/serde",
    "serde"
]
"fuzztarget" = []

[dependencies]
secp256k1 = "0.11.0"

[dependencies.bitcoin]
version = "0.15.0"

[dependencies.serde]
version = "1.0"
optional = true

