[package]
name = "rust-ocean"
version = "0.10.0"
authors = ["Andrew Poelstra <apoelstra@blockstream.com>", "Nikolaos Kostoulas <nikolaos@commerceblock.com"]
description = "Library with support for de/serialization, parsing and executing on data structures and network messages related to Ocean"
license = "CC0-1.0"
homepage = "https://github.com/commerceblock/rust-ocean/"
repository = "https://github.com/commerceblock/rust-ocean/"

[features]
"serde-feature" = [
    "bitcoin/use-serde",
    "serde"
]
"fuzztarget" = []

[dependencies]
bitcoin = "0.20"

[dependencies.serde]
version = "1.0"
optional = true

[dev-dependencies]
rand = "0.6.5"
serde_json = "1"
